test/conformance/kuttl/validate/clusterpolicy/standard/enforce/operator-allnotin-01/04-delete.yaml
# Specifying the kind as `TestStep` performs certain behaviors like this delete operation.
apiVersion: kuttl.dev/v1beta1
kind: TestStep
delete:
- apiVersion: apps/v1
  kind: Deployment
  name: nginx
  namespace: default
