test/conformance/kuttl/validate/clusterpolicy/standard/enforce/operator-allnotin-01/01-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-labels
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
